add funcionality to front and back